--- a/ChartsDemo/ChartsDemo.csproj
+++ b/ChartsDemo/ChartsDemo.csproj
@@ -6,9 +6,7 @@
         <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="5.0.3" />
         <PackageReference Include="MatBlazor" Version="2.8.0" />
-        <PackageReference Include="Syncfusion.Blazor.Charts" Version="18.4.0.42" />
-        <PackageReference Include="Syncfusion.Blazor.ProgressBar" Version="18.4.0.42" />
-        <PackageReference Include="Syncfusion.Blazor.Inputs" Version="18.4.0.42" />
+        <PackageReference Include="Syncfusion.Blazor" Version="18.4.0.44" />
     </ItemGroup>
 
 </Project>
