--- a/ChartsDemo/ChartsDemo.csproj
+++ b/ChartsDemo/ChartsDemo.csproj
@@ -6,7 +6,10 @@
         <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="5.0.3" />
         <PackageReference Include="MatBlazor" Version="2.8.0" />
-        <PackageReference Include="Syncfusion.Blazor" Version="18.4.0.44" />
+        <PackageReference Include="Syncfusion.Blazor" Version="18.4.0.46" />
     </ItemGroup>
 
+        <ItemGroup>
+          <Folder Include="Inputs\" />
+        </ItemGroup>
 </Project>
